# den-bot

./: .dockerignore  .env.example  .gitignore  DOCKER.md  Dockerfile  Makefile  Procfile  README.md  attachments.py  chatgpt.py  denjamin.py  docker-compose.yml  hello.py  images.py  messages.py  pinecone.py  pyproject.toml  requirements.txt  temporal.py  temporal_worker.py  worker.py  workflows.py
.github/workflows/: lint.yml
ai/: __init__.py  chatgpt.py  claude.py  config.py
bot/: __init__.py  client.py
bot/commands/: __init__.py  points.py
db/: __init__.py  connection.py  points.py
discord_utils/: __init__.py  images.py  messages.py
points/: __init__.py  repository.py
points/sql/: points.sql
src/denbot/: cli.py  worker.py
src/denbot/ai/: __init__.py  claude.py  config.py
src/denbot/bot/: __init__.py  client.py
src/denbot/db/: __init__.py  connection.py  schema.sql
src/denbot/discord/: __init__.py  images.py  messages.py
src/denbot/points/: __init__.py  commands.py  repository.py
src/denbot/points/sql/: points.sql
src/denbot/temporal/: __init__.py  client.py  config.py  worker.py  workflows.py
temporal/: __init__.py  activities.py  client.py  config.py  worker.py  workflows.py
tests/: conftest.py
tests/ai/: test_claude.py
tests/bot/: test_client.py
tests/db/: test_connection.py
tests/discord/: test_images.py  test_messages.py
tests/discord_utils/: test_images.py  test_messages.py
tests/points/: test_commands.py  test_repository.py
tests/temporal/: test_config.py  test_workflows.py
